--- a/angular-gitpod/src/app/user-list/user-list.component.html
+++ b/angular-gitpod/src/app/user-list/user-list.component.html
@@ -1,3 +1,6 @@
 <ul>
-    <li *ngFor="let name of names">Hello {{ name }}</li>
-  </ul>
+  <li *ngFor="let name of names">
+    <app-user-item [name]="name">
+    </app-user-item>
+  </li>
+</ul>
